OpenGraph Complete Added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <meta property="og:title" content="PortFolio - Nicolas Tietz - Web Developer" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="My PortFolio Website. You can check all my projects here" />
+    <meta property="og:description" content="My PortFolio Website. You can check all my projects here and contact me." />
+
 
     <meta property="og:url" content="https://nicolas-tietz.github.io/" />
     <meta property="og:image" content="./assets/img/landing.png" />
